# aws-cli-mcp-server

./: .env.example  README.md  pyproject.toml  server.json
src/aws_mcp_server/: __init__.py  config.py  server.py
src/aws_mcp_server/aws/: __init__.py  executor.py
tests/: __init__.py  test_executor.py
